crates/test-ui/ui/msg_send_not_encode.stderr
error[E0277]: the trait bound `Vec<u8>: Encode` is not satisfied
 --> ui/msg_send_not_encode.rs
  |
  |         let _: Vec<u8> = msg_send![cls, new];
  |                          ^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `Vec<u8>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Vec<u8>` to implement `EncodeReturn`
  = note: required for `Vec<u8>` to implement `objc2::__macros::ConvertReturn<objc2::__macros::MethodFamily<1>>`
  = note: required for `objc2::__macros::MethodFamily<1>` to implement `objc2::__macros::RetainSemantics<&AnyClass, Vec<u8>, objc2::__macros::KindSendMessage>`
  = note: required for `objc2::__macros::MethodFamily<1>` to implement `objc2::__macros::MsgSend<&AnyClass, Vec<u8>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Vec<u8>: Encode` is not satisfied
 --> ui/msg_send_not_encode.rs
  |
  |         let _: () = msg_send![cls, newWith: x];
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                     |
  |                     the trait `Encode` is not implemented for `Vec<u8>`
  |                     required by a bound introduced by this call
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Vec<u8>` to implement `EncodeArgument`
  = note: required for `Vec<u8>` to implement `objc2::__macros::ConvertArgument`
  = note: required for `(Vec<u8>,)` to implement `objc2::__macros::ConvertArguments`
note: required by a bound in `objc2::__macros::MsgSend::send_message`
 --> $WORKSPACE/crates/objc2/src/__macros/msg_send/retained.rs
  |
  |     unsafe fn send_message<A: ConvertArguments>(receiver: Receiver, sel: Sel, args: A) -> Return;
  |                               ^^^^^^^^^^^^^^^^ required by this bound in `MsgSend::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `(): Encode` is not satisfied
 --> ui/msg_send_not_encode.rs
  |
  |         let _: () = msg_send![cls, unitAsArgument: ()];
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                     |
  |                     the trait `Encode` is not implemented for `()`
  |                     required by a bound introduced by this call
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `()` to implement `EncodeArgument`
  = note: required for `()` to implement `objc2::__macros::ConvertArgument`
  = note: required for `((),)` to implement `objc2::__macros::ConvertArguments`
note: required by a bound in `objc2::__macros::MsgSend::send_message`
 --> $WORKSPACE/crates/objc2/src/__macros/msg_send/retained.rs
  |
  |     unsafe fn send_message<A: ConvertArguments>(receiver: Receiver, sel: Sel, args: A) -> Return;
  |                               ^^^^^^^^^^^^^^^^ required by this bound in `MsgSend::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
